--- a/views/index.html
+++ b/views/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,7 +9,7 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <link rel="stylesheet" href="css/main.css" type="text/css">
     <script src="navbar.js" type="text/babel"></script>
-    <script src="../publi/index.js"></script>
+    <script src="index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <title>Home</title>
 </head>
@@ -21,15 +21,45 @@
 
         <div class="center" style="position: absolute:">
         <h1 class="text" style="color: white;">HEYY, I'M MEHEER</h1>
-        <!-- <h3 class="text" style="color: white;">I'm a 16 yr old student. I'm really intrested in making websites and some back-end stuff. ive learnt all these on my own, and personal intrest. as you go throgh my website you can find many of my previous projects and also all my certificates which I've got for all these projects.</h3> -->
         </div>
 
     </section>
 
-    <section>
+    <section id="abt">
+        <h2 class="inline-center hl1">Profile</h2>
+        <div class="container">
 
+            <div class="sub">
+                <h2 class="inline-center" style="color: white">About Me!!</h2>
+                <h3>Hello! My name is Meheer, I want to become one of the best Full-Stack Developer. I love to put my self into my codes while I listen to music. My favorite framework as of now is Node.js and make for backend. I'm really good at learning on my own which is really important for a web developer. I've learnt all of my coding from FreeCodeCamp.org. I love to play basketball and handball, And Call Of Duty mobile is my favorite video game. Thank you for checking my website out, check my github for many more stuff and also my insta to talk to me!!</h3>
+            </div>
+
+            <div class="s-grid">
+
+                <div class="sub2">
+                    <h2 class="inline-center" style="color: white">What Have I Learnt? </h2>
+                    <ul style="padding-left: 15px;">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JAVASCRIPT</li>
+                        <li>NODE.JS</li>
+                        <li>MONGOOSE</li>
+                        <li>MONGODB</li>
+                        <li>GIT</li>
+                    </ul>
+                </div>
+                <div class="sub2">
+                    <h2 class="inline-center" style="color: white">Teach</h2>
+                    <h3 >I would love to teach web development to anyone interested! If you are interested in web development, don't hesitate to call or email me. I can do zoom calls, and we can go through anything I have listed on this website. You can find my email and phone number in the footer of the page. I am also happy to take a look at any job offers that come my way.</h3>
+                </div>
+
+            </div>
+
+        </div>
     </section>
 
+<div id="FOOTER">
 
+</div>
 </body>
 </html>
