--- a/views/index.html
+++ b/views/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,8 +9,8 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <link rel="stylesheet" href="css/main.css" type="text/css">
     <script src="navbar.js" type="text/babel"></script>
-    <script src="../publi/index.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="index.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Home</title>
 </head>
 <body>
@@ -21,15 +21,60 @@
 
         <div class="center" style="position: absolute:">
         <h1 class="text" style="color: white;">HEYY, I'M MEHEER</h1>
-        <!-- <h3 class="text" style="color: white;">I'm a 16 yr old student. I'm really intrested in making websites and some back-end stuff. ive learnt all these on my own, and personal intrest. as you go throgh my website you can find many of my previous projects and also all my certificates which I've got for all these projects.</h3> -->
         </div>
 
     </section>
 
-    <section>
+    <section id="abt">
+        <h2 class="inline-center hl1">Profile</h2>
+        <div class="container">
 
+            <div class="sub">
+                <h2 class="inline-center" style="color: white">About Me!!</h2>
+                <h3>Hello! My name is Meheer, I want to become one of the best Full-Stack Developer. I love to put my self into my codes while I listen to music. My favorite framework as of now is Node.js and make for backend. I'm really good at learning on my own which is really important for a web developer. I've learnt all of my coding from FreeCodeCamp.org on my own and this was really some long way... But it did really worth the time i spent on this. I love to play basketball and handball, And Call Of Duty mobile is my favorite video game and I love watching anime. Thank you for checking my website out, check my github for many more stuff and also my discord to talk to me!!</h3>
+            </div>
+
+            <div class="s-grid">
+
+                <div class="sub2">
+                    <h2 class="inline-center" style="color: white">What Have I Learnt? </h2>
+                    <ul style="padding-left: 15px;">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JAVASCRIPT</li>
+                        <li>NODE.JS</li>
+                        <li>MONGOOSE</li>
+                        <li>MONGODB</li>
+                        <li>GIT</li>
+                    </ul>
+                </div>
+                <div class="sub2">
+                    <h2 class="inline-center" style="color: white">Teach</h2>
+                    <h3 >I would love to teach web development to anyone interested! If you are interested in web development, don't hesitate to call or email me. I can do google meet, and we can go through anything I have listed on this website. You can find my email and phone number in the footer of the page. I am also happy to take a look at any job offers that come my way.</h3>
+                </div>
+                <div class="sub2">
+                    <h2 class="inline-center" style="color: white">What I've Worked On</h2>
+                    <h3>As a part of all these I had made a few projects for my learning, such as a website for my English project on tribes and also an project on E-Waste Management and a website which is a combination of all my React projects which I'll be showing in the projects section... Be sure to check them out while ur here!!</h3>
+                </div>
+                <div class="sub2">
+                    <h2 class="inline-center" style="color: white">Why Am I Doing This?</h2>
+                    <h3>This is really a very intresting question to answer.... So it all started when I was in 8th grade there were few intresting post on instagram and I found it really good to see, So this was a picture on how to make websites and info how it works and all... I was amazed by it!! and started to </h3>
+                </div>
+                
+
+            </div>
+
+        </div>
     </section>
 
+<section class="foot">
+    <p class="footItem">Meheer &copy 2021</p>
+    <p class="footItem"><a style="text-decoration: none; color: #7f8a9a;" href="mailto:meherr17.j@gmail.com"><i class="fab fa-mailchimp"></i>  meherr17.j@gmail.com</a></p>
+    <p class="footItem"><a style="text-decoration: none; color: #7f8a9a;" href="tel:+91 8310697451"><i class="fas fa-mobile"></i>  +91-8310697451</a></p>
+    <p class="footItem"><i class="fab fa-discord"></i>  discord - Meheer#2192</p>
+    <p class="footItem"><a href="https://github.com/Meheer17" style="text-decoration: none; color: #7f8a9a;" target="_blank"><i class="fab fa-github"></i>  github</a></p>
+</section>
 
+</div>
 </body>
 </html>
