--- a/views/projects.html
+++ b/views/projects.html
@@ -30,6 +30,8 @@
     <br><br>
     <h1 style="color: white; text-align: center;">Here are some of my projects which ive done over the years...</h1>
     <br><br>
+
+
     <h3  style="color: white;">My First Five projects:- </h3>
     <br><br>
     <div class="p-grid">
@@ -79,6 +81,254 @@
                 <a href="">View</a>
             </div>
         </div>
+
+    </div>
+    <br><br>
+
+    <h3  style="color: white;">My First Five projects:- </h3>
+    <br><br>
+    <div class="p-grid">
+
+        <div class="p-elem">
+            <img src="css/images/cool.jpg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href="">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/cool.jpg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href="">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/cool.jpg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href="">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/cool.jpg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href="">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/cool.jpg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href="">View</a>
+            </div>
+        </div>
+
+    </div>
+    <br><br>
+
+    <h3  style="color: white;">My First Five projects:- </h3>
+    <br><br>
+    <div class="p-grid">
+
+        <div class="p-elem">
+            <img src="css/images/cool.jpg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href="">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/cool.jpg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href="">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/cool.jpg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href="">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/cool.jpg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href="">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/cool.jpg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href="">View</a>
+            </div>
+        </div>
+
+    </div>
+    <br><br>
+
+    <h3  style="color: white;">My First Five projects:- </h3>
+    <br><br>
+    <div class="p-grid">
+
+        <div class="p-elem">
+            <img src="css/images/cool.jpg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href="">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/cool.jpg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href="">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/cool.jpg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href="">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/cool.jpg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href="">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/cool.jpg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href="">View</a>
+            </div>
+        </div>
+
+    </div>
+    <br><br>
+
+    <h3  style="color: white;">My First Five projects:- </h3>
+    <br><br>
+    <div class="p-grid">
+
+        <div class="p-elem">
+            <img src="css/images/cool.jpg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href="">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/cool.jpg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href="">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/cool.jpg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href="">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/cool.jpg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href="">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/cool.jpg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href="">View</a>
+            </div>
+        </div>
+
+    </div>
+    <br><br>
+
+    <h3  style="color: white;">My First Five projects:- </h3>
+    <br><br>
+    <div class="p-grid">
+
+        <div class="p-elem">
+            <img src="css/images/cool.jpg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href="">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/cool.jpg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href="">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/cool.jpg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href="">View</a>
+            </div>
+        </div>
+        
 
     </div>
 
