--- a/views/5/2.html
+++ b/views/5/2.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
+	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../css/images/MJ.png">
+    <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>   
+    <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script src="navbar.js" type="text/babel"></script>
+    <script src="index.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<title>ENGLISH PROJECT</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
@@ -138,12 +145,11 @@ button:hover{
   transform: 1;
 }
  .c{
- color:black;
  padding:10px;
  width:60%;
  color:white ;
  float: left;
- 
+ font-size: 25px;
  margin-top:10vh;
  margin-left:5vh;
  border-radius:10px;
@@ -222,9 +228,7 @@ audio{
 			<a href="#six-section">
 				<li>CHECK UP</li>
 			</a>
-			<a href="#seven-section">
-				<li>DONE BY</li>
-			</a>
+
 		</ul>
 	</nav>
 	<!-- navbar ends -->
