--- a/views/index.html
+++ b/views/index.html
@@ -4,19 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="css/images/MJ.png">
-    <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>   
+    <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <link rel="stylesheet" href="css/main.css" type="text/css">
     <script src="navbar.js" type="text/babel"></script>
     <script src="index.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <title>Home</title>
 </head>
 <body>
-  
-<div id="NAVBAR"></div>
+  <div id="NAVBAR"></div>
 
     <section id="welcome">
 
@@ -58,7 +56,7 @@
                     <h3>As a part of all these I had made a few projects for my learning, such as a website for my English project on tribes and also an project on E-Waste Management and a website which is a combination of all my React projects which I'll be showing in the projects section... Be sure to check them out while ur here!!</h3>
                 </div>
                 <div class="sub2">
-                    <h2 class="inline-center" style="color: white">Why Am I Doing This?</h2>
+                    <h2 class="inline-center" style="color: white">Reason For Presenting This</h2>
                     <h3>This is really a very intresting question to answer.... So it all started when I was in 8th grade there were few intresting post on instagram and I found it really good to see, So this was a picture on how to make websites and info how it works and all... I was amazed by it!! and started to </h3>
                 </div>
 
