--- a/views/1/1.html
+++ b/views/1/1.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" href="../css/images/MJ.png">
+    <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>   
+    <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script src="navbar.js" type="text/babel"></script>
+    <script src="index.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Tribute Page</title>
 </head>
 <style>
     *{margin:0; padding:0;}
@@ -19,6 +26,7 @@
     @media(max-width:800px){img{width50%; height:50%;}}
 </style>
 <body>
+
     <main class="box" id="main">
 <h1 style="padding-top:15px; font-size:50px; text-align:center;" id="title"><bold>Dr.A P J ABDUL KALAM<bold></h1><br>
  <p>-The Missle Man Of India</p><hr><br>
