--- a/views/2/3.html
+++ b/views/2/3.html
@@ -3,7 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" href="../css/images/MJ.png">
+    <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>   
+    <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script src="navbar.js" type="text/babel"></script>
+    <script src="index.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/css/bootstrap.min.css"> 
+    <title>Drum Machine</title>
 </head>
 <style>
     *{
@@ -114,9 +122,9 @@ padding:10px;
   }
 </style>
 <body>
-  <div id="app"></div>
+  <div id="root"></div>
 
-  <script>
+  <script  type="text/babel">
       const audioClips=[{
     keyCode: 81,
     keyTrigger: 'Q',
@@ -261,6 +269,6 @@ playSound();
   
  
   
-ReactDOM.render(<App/>, document.getElementById('app'));</script>  
+ReactDOM.render(<App/>, document.getElementById('root'));</script>  
 </body>
 </html>
