--- a/views/projects.html
+++ b/views/projects.html
@@ -14,8 +14,8 @@
     <title>Projects</title>
 </head>
 <body>
-
 <div id="NAVBAR"></div>
+
 
 <section id="welcome">
 
@@ -37,101 +37,48 @@
     <div class="p-grid">
 
         <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
+            <img src="css/images/1.jpeg" alt="" />
             <div class="content">
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href="">View</a>
+                <a href="/projects/tribute-page" target="_blank">View</a>
             </div>
         </div>
         <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
+            <img src="css/images/2.jpeg" alt="" />
             <div class="content">
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href="">View</a>
+                <a href="/projects/survey-form" target="_blank">View</a>
             </div>
         </div>
         <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
+            <img src="css/images/3.jpeg" alt="" />
             <div class="content">
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href="">View</a>
+                <a href="/projects/online-shop" target="_blank">View</a>
             </div>
         </div>
         <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
+            <img src="css/images/4.jpeg" alt="" />
             <div class="content">
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href="">View</a>
+                <a href="/projects/document" target="_blank">View</a>
             </div>
         </div>
         <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
+            <img src="css/images/5.jpeg" alt="" />
             <div class="content">
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href="">View</a>
-            </div>
-        </div>
-
-    </div>
-    <br><br>
-
-    <h3  style="color: white;">My First Five projects:- </h3>
-    <br><br>
-    <div class="p-grid">
-
-        <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
-            <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
-                <br>
-                <a href="">View</a>
-            </div>
-        </div>
-        <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
-            <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
-                <br>
-                <a href="">View</a>
-            </div>
-        </div>
-        <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
-            <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
-                <br>
-                <a href="">View</a>
-            </div>
-        </div>
-        <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
-            <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
-                <br>
-                <a href="">View</a>
-            </div>
-        </div>
-        <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
-            <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
-                <br>
-                <a href="">View</a>
+                <a href="/projects/profile-1"target="_blank">View</a>
             </div>
         </div>
 
@@ -148,7 +95,7 @@
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href="">View</a>
+                <a href="/projects/random-quote-machine"target="_blank">View</a>
             </div>
         </div>
         <div class="p-elem">
@@ -157,7 +104,7 @@
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href="">View</a>
+                <a href="/projects/markeddown"target="_blank">View</a>
             </div>
         </div>
         <div class="p-elem">
@@ -166,7 +113,7 @@
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href="">View</a>
+                <a href="/projects/drum-machine"target="_blank">View</a>
             </div>
         </div>
         <div class="p-elem">
@@ -175,7 +122,7 @@
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href="">View</a>
+                <a href="/projects/calculator"target="_blank">View</a>
             </div>
         </div>
         <div class="p-elem">
@@ -184,60 +131,7 @@
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href="">View</a>
-            </div>
-        </div>
-
-    </div>
-    <br><br>
-
-    <h3  style="color: white;">My First Five projects:- </h3>
-    <br><br>
-    <div class="p-grid">
-
-        <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
-            <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
-                <br>
-                <a href="">View</a>
-            </div>
-        </div>
-        <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
-            <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
-                <br>
-                <a href="">View</a>
-            </div>
-        </div>
-        <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
-            <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
-                <br>
-                <a href="">View</a>
-            </div>
-        </div>
-        <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
-            <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
-                <br>
-                <a href="">View</a>
-            </div>
-        </div>
-        <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
-            <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
-                <br>
-                <a href="">View</a>
+                <a href="/projects/pomodoro-clock"target="_blank">View</a>
             </div>
         </div>
 
@@ -254,7 +148,7 @@
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href="">View</a>
+                <a href=""target="_blank">View</a>
             </div>
         </div>
         <div class="p-elem">
@@ -263,7 +157,7 @@
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href="">View</a>
+                <a href=""target="_blank">View</a>
             </div>
         </div>
         <div class="p-elem">
@@ -272,7 +166,7 @@
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href="">View</a>
+                <a href=""target="_blank">View</a>
             </div>
         </div>
         <div class="p-elem">
@@ -281,7 +175,7 @@
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href="">View</a>
+                <a href=""target="_blank">View</a>
             </div>
         </div>
         <div class="p-elem">
@@ -290,7 +184,7 @@
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href="">View</a>
+                <a href=""target="_blank">View</a>
             </div>
         </div>
 
@@ -307,7 +201,78 @@
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href="">View</a>
+                <a href=""target="_blank">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/cool.jpg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href=""target="_blank">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/cool.jpg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href=""target="_blank">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/cool.jpg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href=""target="_blank">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/cool.jpg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href=""target="_blank">View</a>
+            </div>
+        </div>
+
+    </div>
+    <br><br>
+
+    <h3  style="color: white;">My First Five projects:- </h3>
+    <br><br>
+    <div class="p-grid">
+
+        <div class="p-elem">
+            <img src="css/images/cool.jpg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href=""target="_blank">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/cool.jpg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href=""target="_blank">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/cool.jpg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href=""target="_blank">View</a>
             </div>
         </div>
         <div class="p-elem">
@@ -325,7 +290,42 @@
                 <h2>Tribute Page</h2>
                 <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
                 <br>
-                <a href="">View</a>
+                <a href=""target="_blank">View</a>
+            </div>
+        </div>
+
+    </div>
+    <br><br>
+
+    <h3  style="color: white;">My First Five projects:- </h3>
+    <br><br>
+    <div class="p-grid">
+
+        <div class="p-elem">
+            <img src="css/images/6.jpeg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href="/projects/temp-convert"target="_blank">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/7.jpeg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href="/projects/tribe-web"target="_blank">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/8.jpg" alt="" />
+            <div class="content">
+                <h2>Tribute Page</h2>
+                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <br>
+                <a href=""target="_blank">View</a>
             </div>
         </div>
         
